WIP: Merge DOMExtensibleService into DOMService
yangtools.concepts.ExtensibleObject provides a generalized view on what
we are trying to achieve here.

This patch adopts it into DOMService, forcing all DOMServices to define
their type-safe Extension point.

JIRA: MDSAL-XXX
Change-Id: I355fbe82cf913af7682432611b5f25773832a9ab
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>